tests/e2e/horizon/network-policy/01-patch-update-ingress.yaml
# SPDX-FileCopyrightText: Copyright 2026 SAP SE or an SAP affiliate company
#
# SPDX-License-Identifier: Apache-2.0

# Patch: add a second ingress source (monitoring namespace).
apiVersion: horizon.openstack.c5c3.io/v1alpha1
kind: Horizon
metadata:
  name: horizon-netpol
  namespace: openstack
spec:
  networkPolicy:
    ingress:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openstack
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
